tests/baselines/reference/alwaysStrictNoImplicitUseStrict.errors.txt
tests/cases/compiler/alwaysStrictNoImplicitUseStrict.ts(4,13): error TS1100: Invalid use of 'arguments' in strict mode.


==== tests/cases/compiler/alwaysStrictNoImplicitUseStrict.ts (1 errors) ====
    
    module M {
        export function f() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }